--- a/index.html
+++ b/index.html
@@ -270,16 +270,16 @@
 				
 			<!-- Tools for Mobile Start -->
 			<div class="d-lg-none d-block container-fluid py-5 px-0 px-sm-1">
-				<div class="accordion" id="accordionPanelsStayOpenExample">
+				<div class="accordion" id="accordionDiv">
 
 					<!-- Mobile Front End Start -->
 					<div class="accordion-item">
 					  <h2 class="accordion-header">
-						<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+						<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 						  Front End
 						</button>
 					  </h2>
-					  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+					  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionDiv">
 						<div class="accordion-body">
 							<div class="row">
 								<div class="col-6 text-center"><img src="./images/logo-html5.png" alt="html logo"></div>
@@ -295,11 +295,11 @@
 					<!-- Mobile MERN Start -->
 					<div class="accordion-item">
 					  <h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 						  MERN
 						</button>
 					  </h2>
-					  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+					  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionDiv">
 						<div class="accordion-body">
 							<div class="row">
 								<div class="col-6 text-center"><img src="./images/logo-mongodb.png" alt="mongodb logo"></div>
@@ -315,20 +315,22 @@
 					<!-- Mobile Other Tools Start -->
 					<div class="accordion-item">
 					  <h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 						  Other Tools
 						</button>
 					  </h2>
-					  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+					  <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionDiv">
 						<div class="accordion-body">
 							<div class="row">
-
+								<div class="col-6 text-center"><img src="./images/logo-heroku.png" alt="heroku logo"></div>
+								<div class="col-6 text-center"><img src="./images/logo-git.png" alt="git logo"></div>
+								<div class="col-6 text-center"><img src="./images/logo-postman.png" alt="postman logo"></div>
+								<div class="col-6 text-center"><img src="./images/logo-sublime-text-3.png" alt="sublime text 3 logo"></div>
 							</div>
 						</div>
 					  </div>
 					</div>
 					<!-- Mobile Other Tools End -->
-
 				  </div>
 			</div>
 			<!-- Tools for Mobile End -->
