--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
-	<title>Chris' Web Portfolio</title>
+	<title>Chris Web Portfolio</title>
 </head>
 <body>
 
