Updated about me

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<!-- position-absolute top-50 start-0 translate-middle-y col-12 col-md-6 -->
 					<h1 class="border-bottom border-primary mt-sm-5 mt-0 pt-sm-5 pt-0 fw-bold">Chris Totanes</h1>
 					<h2 class="mb-3">Full Stack Web Developer</h2>
-					<p class="pb-3 about_me">I am a career shifter, reigniting my passion for web development. Let's build your dreams, start from the ground and reach for the stars.</p>
+					<p class="pb-3 about_me">I am a career shifter, reigniting my passion for web development. Let's start from the ground, build your dreams and reach for the stars.</p>
 					<button type="button" class="btn btn-success mx-auto" data-bs-toggle="modal" data-bs-target="#modalDiv">Get in touch <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar2-check" viewBox="0 0 16 16">
 						<path d="M10.854 8.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
 						<path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM2 2a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H2z"/>
