Refactor message me modal

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
 									<div class="form-group py-1">
 										<label for="yourName">Name:</label>
-										<input type="text" class="form-control" id="yourName" name="yourName" placeholder="Your Name" required autocomplete>
+										<input type="text" class="form-control" id="yourName" name="yourName" placeholder="Your name" required autocomplete>
 									</div>
 
 									<div class="form-group py-1">
