--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<div class="modal-dialog modal-dialog-centered">
 										<div class="modal-content modal_bkg">
 											<div class="modal-header">
-											<h5 class="modal-title" id="modal1Label">Project two</h5>
+											<h5 class="modal-title" id="modal1Label">Project One</h5>
 											</div>
 											<div class="modal-body">
 											<img src="./images/project1.png" class="img-fluid" alt="tindog">
@@ -135,7 +135,7 @@
 								<div class="modal-dialog modal-dialog-centered">
 									<div class="modal-content modal_bkg">
 										<div class="modal-header">
-										<h5 class="modal-title" id="modal2Label">Project one</h5>
+										<h5 class="modal-title" id="modal2Label">Project two</h5>
 										</div>
 										<div class="modal-body">
 										<img src="./images/project2.png" class="img-fluid" alt="moveit features">
@@ -270,6 +270,7 @@
 				
 			<!-- Tools for Mobile Start -->
 			<div class="d-lg-none d-block container-fluid py-5 px-0 px-sm-1">
+				<h2 class="col-12 fw-bold text-center pb-3 mb-0">Tools that I use</h2>
 				<div class="accordion" id="accordionDiv">
 
 					<!-- Mobile Front End Start -->
