--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 					<!-- Project 1 start -->
 						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal1">
-							<img src="./images/project1.png" class="transform img_property" alt="Tindog screenshot" title="Tindog screenshot">
+							<img src="./images/project1.png" class="transform img_property shadow" alt="Tindog screenshot" title="Tindog screenshot">
 								<!-- Modal -->
 								<div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="#modal1Label" aria-hidden="true">
 									<div class="modal-dialog modal-dialog-centered">
@@ -114,7 +114,7 @@
 											<h5 class="modal-title" id="modal1Label">Project One</h5>
 											</div>
 											<div class="modal-body">
-											<img src="./images/project1.png" class="img-fluid" alt="Tindog screenshot" title="Tindog screenshot">
+											<img src="./images/project1.png" class="img-fluid shadow" alt="Tindog screenshot" title="Tindog screenshot">
 											<p class="text-start mt-3">
 												Tindog. A landing page done in one of my previous learning activities.
 											</p>
@@ -130,7 +130,7 @@
 
 					<!-- Project 2 start -->
 					<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal2">
-						<img src="./images/project2.png" class="transform img_property" alt="Moveit features screenshot" title="Moveit features">
+						<img src="./images/project2.png" class="transform img_property shadow" alt="Moveit features screenshot" title="Moveit features">
 							<!-- Modal -->
 							<div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="#modal2Label" aria-hidden="true">
 								<div class="modal-dialog modal-dialog-centered">
@@ -139,7 +139,7 @@
 										<h5 class="modal-title" id="modal2Label">Project two</h5>
 										</div>
 										<div class="modal-body">
-										<img src="./images/project2.png" class="img-fluid" alt="moveit features" title="Moveit features">
+										<img src="./images/project2.png" class="img-fluid shadow" alt="moveit features" title="Moveit features">
 										<p class="text-start mt-3">
 											The features section with a carousel below it of a moving company done in a previous activity.
 										</p>
@@ -155,7 +155,7 @@
 
 					<!-- Project 3 start -->
 						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal3">
-							<img src="./images/project3.png" class="transform img_property" alt="Tindog confessional" title="Tindog confessional">
+							<img src="./images/project3.png" class="transform img_property shadow" alt="Tindog confessional" title="Tindog confessional">
 								<!-- Modal -->
 								<div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="#modal3Label" aria-hidden="true">
 									<div class="modal-dialog modal-dialog-centered">
@@ -164,7 +164,7 @@
 											<h5 class="modal-title" id="modal3Label">Project three</h5>
 											</div>
 											<div class="modal-body">
-											<img src="./images/project3.png" class="img-fluid" alt="Tindog confessional" title="Tindog confessional">
+											<img src="./images/project3.png" class="img-fluid shadow" alt="Tindog confessional" title="Tindog confessional">
 											<p class="text-start mt-3">
 												The confessional section of Tindog with a snippet of its pricing section. Another activity done from another course.
 											</p>
@@ -187,21 +187,21 @@
 			<div class="d-block d-lg-none card_size mx-md-3">
 				<div class="d-flex flex-column mx-5 gap-3">
 					<h2 class="text-center mt-5 fw-bold">Projects</h2>
-					<div class="card card_size_2 border-0 mb-md-5 mb-3">
+					<div class="card card_size_2 border-0 mb-md-5 mb-3 shadow">
 					  <img src="./images/project1.png" class="card-img-top" alt="Tindog screenshot" title="Tindog screenshot">
 					  <div class="card-body card_tool_bkg">
 					    <p class="card-text">Tindog. A landing page done in one of my previous learning activities.</p>
 					  </div>
 					</div>
 
-					<div class="card card_size_2 border-0 mb-md-5 mb-3">
+					<div class="card card_size_2 border-0 mb-md-5 mb-3 shadow">
 					  <img src="./images/project2.png" class="card-img-top" alt="Moveit features" title="Moveit features">
 					  <div class="card-body card_tool_bkg">
 					    <p class="card-text">The features section with a carousel below it of a moving company done in a previous activity.</p>
 					  </div>
 					</div>
 
-					<div class="card card_size_2 border-0">
+					<div class="card card_size_2 border-0 shadow">
 					  <img src="./images/project3.png" class="card-img-top" alt="Tindog confessional" title="Tindog confessional">
 					  <div class="card-body card_tool_bkg">
 					    <p class="card-text">The confessional section of Tindog with a snippet of its pricing section. Another activity done from another course.</p>
@@ -272,7 +272,7 @@
 			<!-- Tools for Mobile Start -->
 			<div class="d-lg-none d-block container-fluid py-5 px-0 px-sm-1">
 				<h2 class="col-12 fw-bold text-center pb-3 mb-0">Tools that I use</h2>
-				<div class="accordion" id="accordionDiv">
+				<div class="accordion shadow" id="accordionDiv">
 
 					<!-- Mobile Front End Start -->
 					<div class="accordion-item">
@@ -381,7 +381,7 @@
 				<div class="h4 mx-auto">Get in touch!</div>
 
 				<!-- Button trigger modal -->
-				<button type="button" class="btn btn-primary mx-auto" data-bs-toggle="modal" data-bs-target="#modalDiv" title="Message Me">
+				<button type="button" class="btn btn-primary mx-auto shadow" data-bs-toggle="modal" data-bs-target="#modalDiv" title="Message Me">
 					Message Me
 				</button>
 				
@@ -420,8 +420,8 @@
 					</div>
 				</div>
 
-				<div class="d-none d-md-block mx-auto pt-5"><img src="./images/laptopdesk.jpeg" alt="laptop on desk" title="Laptop on desk" class="img_property rounded"></div>
-				<div class="d-md-none mx-auto pt-3"><img src="./images/laptopdesk.jpeg" alt="laptop on desk" title="Laptop on desk" class="img-fluid rounded"></div>
+				<div class="d-none d-md-block mx-auto pt-5"><img src="./images/laptopdesk.jpeg" alt="laptop on desk" title="Laptop on desk" class="img_property rounded shadow"></div>
+				<div class="d-md-none mx-auto pt-3"><img src="./images/laptopdesk.jpeg" alt="laptop on desk" title="Laptop on desk" class="img-fluid rounded shadow"></div>
 			</div>
 
 			<!-- Form Modal end -->
