Add clock timer hyperlink

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 					<!-- Project 3 start -->
 						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal3">
-							<img src="./images/project3.png" class="transform img_property shadow" alt="Tindog confessional" title="Tindog confessional">
+							<img src="./images/clocktimer.png" class="transform img_property shadow" alt="Clock and timer" title="Clock and Timer Project">
 								<!-- Modal -->
 								<div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="#modal3Label" aria-hidden="true">
 									<div class="modal-dialog modal-dialog-centered">
@@ -164,10 +164,11 @@
 											<h5 class="modal-title" id="modal3Label">Project three</h5>
 											</div>
 											<div class="modal-body">
-											<img src="./images/project3.png" class="img-fluid shadow" alt="Tindog confessional" title="Tindog confessional">
+											<img src="./images/clocktimer.png" class="img-fluid shadow" alt="Clock and Timer with Background change" title="Clock and Timer with Background changeProject">
 											<p class="text-start mt-3">
-												The confessional section of Tindog with a snippet of its pricing section. Another activity done from another course.
+												A clock with alarm, timer and the background will change at specific times of the day. The user can set an alarm that will show a countdown and ring an audio at the end. The project is responsive and mainly built with CSS and JavaScript.
 											</p>
+											<a href="https://christotanes.github.io/Clock-Timer-Project/">View project</a>
 											</div>
 											<div class="modal-footer d-flex justify-content-center">
 											<button type="button" class="btn btn-dark" data-bs-dismiss="modal" title="Close">Close</button>
@@ -202,9 +203,10 @@
 					</div>
 
 					<div class="card card_size_2 border-0 shadow">
-					  <img src="./images/project3.png" class="card-img-top" alt="Tindog confessional" title="Tindog confessional">
+					  <img src="./images/clocktimer.png" class="card-img-top" alt="Clock and Timer with Background change" title="Clock and Timer with Background change Project">
 					  <div class="card-body card_tool_bkg">
-					    <p class="card-text">The confessional section of Tindog with a snippet of its pricing section. Another activity done from another course.</p>
+					    <p class="card-text">A clock with alarm, timer and the background will change at specific times of the day. The user can set an alarm that will show a countdown and ring an audio at the end. The project is responsive and mainly built with CSS and JavaScript.</p>
+						<a href="https://christotanes.github.io/Clock-Timer-Project/">View project</a>
 					  </div>
 					</div>
 				</div>	
