Add simon miniproject link info and screenshots

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<!-- position-absolute top-50 start-0 translate-middle-y col-12 col-md-6 -->
 					<h1 class="border-bottom border-primary mt-sm-5 mt-0 pt-sm-5 pt-0 fw-bold">Chris Totanes</h1>
 					<h2 class="mb-3">Full Stack Web Developer</h2>
-					<p class="pb-3 about_me">I am a career shifter, reigniting my passion for web development. Let's start from the ground, build your dreams and reach for the stars.</p>
+					<p class="pb-3 about_me">I am a career shifter, reigniting my passion for web development. Let's start from the ground, build your dreams and reach for the stars. Portfolio website under major overhaul</p>
 					<button type="button" class="btn btn-success mx-auto" data-bs-toggle="modal" data-bs-target="#modalDiv" title="Message Me">Get in touch <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar2-check" viewBox="0 0 16 16">
 						<path d="M10.854 8.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
 						<path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM2 2a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H2z"/>
@@ -161,14 +161,14 @@
 									<div class="modal-dialog modal-dialog-centered">
 										<div class="modal-content modal_bkg">
 											<div class="modal-header">
-											<h5 class="modal-title" id="modal3Label">Project three</h5>
+											<h5 class="modal-title" id="modal3Label">Alarm Clock Mini-Project</h5>
 											</div>
 											<div class="modal-body">
 											<img src="./images/clocktimer.png" class="img-fluid shadow" alt="Clock and Timer with Background change" title="Clock and Timer with Background changeProject">
 											<p class="text-start mt-3">
 												A clock with alarm, timer and the background will change at specific times of the day. The user can set an alarm that will show a countdown and ring an audio at the end. The project is responsive and mainly built with CSS and JavaScript.
 											</p>
-											<a href="https://christotanes.github.io/Clock-Timer-Project/">View project</a>
+											<a href="https://christotanes.github.io/Clock-Timer-Project/" class="btn btn-dark" target="_blank">View project</a>
 											</div>
 											<div class="modal-footer d-flex justify-content-center">
 											<button type="button" class="btn btn-dark" data-bs-dismiss="modal" title="Close">Close</button>
@@ -178,6 +178,30 @@
 								</div>
 						</div>
 					<!-- Project 3 end -->
+					<!-- Project 4 start -->
+						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal4">
+							<img src="./images/simongame3.PNG" class="transform img_property shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
+								<!-- Modal -->
+								<div class="modal fade" id="modal4" tabindex="-1" aria-labelledby="#modal4Label" aria-hidden="true">
+									<div class="modal-dialog modal-dialog-centered">
+										<div class="modal-content modal_bkg">
+											<div class="modal-header">
+											<h5 class="modal-title" id="modal4Label">Simon Game Mini-Project</h5>
+											</div>
+											<div class="modal-body">
+											<img src="./images/simongame2.PNG" class="img-fluid shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
+											<p class="text-start mt-3">
+												This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was challenging to make as JavaScript is a synchronous and single-threaded language.
+											</p>
+											<a href="https://christotanes.github.io/Simon-Game/" class="btn btn-dark" target="_blank">View project</a>
+											</div>
+											<div class="modal-footer d-flex justify-content-center">
+											<button type="button" class="btn btn-dark" data-bs-dismiss="modal" title="Close">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
+						</div>
 					</div>
 					
 				</div>
@@ -206,9 +230,17 @@
 					  <img src="./images/clocktimer.png" class="card-img-top" alt="Clock and Timer with Background change" title="Clock and Timer with Background change Project">
 					  <div class="card-body card_tool_bkg">
 					    <p class="card-text">A clock with alarm, timer and the background will change at specific times of the day. The user can set an alarm that will show a countdown and ring an audio at the end. The project is responsive and mainly built with CSS and JavaScript.</p>
-						<a href="https://christotanes.github.io/Clock-Timer-Project/">View project</a>
+						<a href="https://christotanes.github.io/Clock-Timer-Project/" class="btn btn-dark" target="_blank">View project</a>
 					  </div>
 					</div>
+
+					<div class="card card_size_2 border-0 shadow">
+						<img src="./images/simongame2.PNG" class="card-img-top" alt="Simon Game Mini-project" title="Simon Game Mini-project">
+						<div class="card-body card_tool_bkg">
+						  <p class="card-text">This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was challenging to make as JavaScript is a synchronous and single-threaded language.</p>
+						  <a href="https://christotanes.github.io/Simon-Game/" class="btn btn-dark" target="_blank">View project</a>
+						</div>
+					  </div>
 				</div>	
 			</div>
 			<!-- CARD if mobile End -->
