--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 											<div class="modal-body">
 											<img src="./images/simongame2.PNG" class="img-fluid shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
 											<p class="text-start mt-3">
-												This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was challenging to make as JavaScript is a synchronous and single-threaded language.
+												This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was a fun challenge and really checked my capabilities in JavaScript.
 											</p>
 											<a href="https://christotanes.github.io/Simon-Game/" class="btn btn-dark" target="_blank">View project</a>
 											</div>
@@ -237,7 +237,7 @@
 					<div class="card card_size_2 border-0 shadow">
 						<img src="./images/simongame2.PNG" class="card-img-top" alt="Simon Game Mini-project" title="Simon Game Mini-project">
 						<div class="card-body card_tool_bkg">
-						  <p class="card-text">This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was challenging to make as JavaScript is a synchronous and single-threaded language.</p>
+						  <p class="card-text">This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was a fun challenge and really checked my capabilities in JavaScript.</p>
 						  <a href="https://christotanes.github.io/Simon-Game/" class="btn btn-dark" target="_blank">View project</a>
 						</div>
 					  </div>
