Fixed broken link

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					<!-- Project 3 end -->
 					<!-- Project 4 start -->
 						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal4">
-							<img src="./images/simongame3.PNG" class="transform img_property shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
+							<img src="./images/simongame3.png" class="transform img_property shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
 								<!-- Modal -->
 								<div class="modal fade" id="modal4" tabindex="-1" aria-labelledby="#modal4Label" aria-hidden="true">
 									<div class="modal-dialog modal-dialog-centered">
@@ -189,7 +189,7 @@
 											<h5 class="modal-title" id="modal4Label">Simon Game Mini-Project</h5>
 											</div>
 											<div class="modal-body">
-											<img src="./images/simongame2.PNG" class="img-fluid shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
+											<img src="./images/simongame2.png" class="img-fluid shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
 											<p class="text-start mt-3">
 												This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was a fun challenge and really checked my capabilities in JavaScript.
 											</p>
@@ -235,7 +235,7 @@
 					</div>
 
 					<div class="card card_size_2 border-0 shadow">
-						<img src="./images/simongame2.PNG" class="card-img-top" alt="Simon Game Mini-project" title="Simon Game Mini-project">
+						<img src="./images/simongame2.png" class="card-img-top" alt="Simon Game Mini-project" title="Simon Game Mini-project">
 						<div class="card-body card_tool_bkg">
 						  <p class="card-text">This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was a fun challenge and really checked my capabilities in JavaScript.</p>
 						  <a href="https://christotanes.github.io/Simon-Game/" class="btn btn-dark" target="_blank">View project</a>
