Add new projects, add links to new projects

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 					<!-- Project 1 start -->
 						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal1">
-							<img src="./images/project1.png" class="transform img_property shadow" alt="Tindog screenshot" title="Tindog screenshot">
+							<img src="./images/bakery-react.png" class="transform img_property shadow" alt="Bakery React App" title="Bakery React App">
 								<!-- Modal -->
 								<div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="#modal1Label" aria-hidden="true">
 									<div class="modal-dialog modal-dialog-centered">
@@ -114,10 +114,14 @@
 											<h5 class="modal-title" id="modal1Label">Project One</h5>
 											</div>
 											<div class="modal-body">
-											<img src="./images/project1.png" class="img-fluid shadow" alt="Tindog screenshot" title="Tindog screenshot">
+											<img src="./images/bakery-react.png" class="img-fluid shadow" alt="Bakery React App" title="Bakery React App">
+											<img src="./images/bakery-user.png" class="img-fluid shadow" alt="Bakery React App" title="Bakery React App">
+											<img src="./images/bakery-admin.png" class="img-fluid shadow" alt="Bakery React App" title="Bakery React App">
 											<p class="text-start mt-3">
-												Tindog. A landing page done in one of my previous learning activities.
+												JerryBee. A React app for a bakery website that has user-friendly UI which has CRUD functionalities that integrates with its custom RESTful API.
 											</p>
+											<a href="http://zuitt-bootcamp-prod-328-6138-totanes.s3-website.us-east-1.amazonaws.com/" class="btn btn-dark" target="_blank">View project on AWS S3</a>
+						<a href="https://bakery-react.onrender.com/" class="btn btn-dark" target="_blank">View project on Render</a>
 											</div>
 											<div class="modal-footer d-flex justify-content-center">
 											<button type="button" class="btn btn-dark" data-bs-dismiss="modal" title="Close">Close</button>
@@ -129,39 +133,67 @@
 					<!-- Project 1 end -->
 
 					<!-- Project 2 start -->
-					<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal2">
-						<img src="./images/project2.png" class="transform img_property shadow" alt="Moveit features screenshot" title="Moveit features">
-							<!-- Modal -->
-							<div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="#modal2Label" aria-hidden="true">
-								<div class="modal-dialog modal-dialog-centered">
-									<div class="modal-content modal_bkg">
-										<div class="modal-header">
-										<h5 class="modal-title" id="modal2Label">Project two</h5>
-										</div>
-										<div class="modal-body">
-										<img src="./images/project2.png" class="img-fluid shadow" alt="moveit features" title="Moveit features">
-										<p class="text-start mt-3">
-											The features section with a carousel below it of a moving company done in a previous activity.
-										</p>
-										</div>
-										<div class="modal-footer d-flex justify-content-center">
-										<button type="button" class="btn btn-dark" data-bs-dismiss="modal" title="Close">Close</button>
+						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal2">
+							<img src="./images/bakery-api.png" class="transform img_property shadow" alt="RESTful API screenshot" title="RESTful API">
+								<!-- Modal -->
+								<div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="#modal2Label" aria-hidden="true">
+									<div class="modal-dialog modal-dialog-centered">
+										<div class="modal-content modal_bkg">
+											<div class="modal-header">
+											<h5 class="modal-title" id="modal2Label">JerryBee Custom RESTful API</h5>
+											</div>
+											<div class="modal-body">
+											<img src="./images/bakery-api.png" class="img-fluid shadow" alt="RESTful API" title="RESTful API">
+											<p class="text-start mt-3">
+												A custom built RESTful API that integrates with the Bakery React app was made with MongoDB, Express.js and Node.js. CRUD operations were made in the API. Thorough testing with error handling was done using Postman.
+											</p>
+											<a href="http://ec2-18-216-90-85.us-east-2.compute.amazonaws.com/b2/products/active/" class="btn btn-dark" target="_blank">View project on AWS EC2</a>
+											<a href="https://bakery-api-qxhm.onrender.com/products/active" class="btn btn-dark" target="_blank">View project on Render</a>
+											</div>
+											<div class="modal-footer d-flex justify-content-center">
+											<button type="button" class="btn btn-dark" data-bs-dismiss="modal" title="Close">Close</button>
+											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-					</div>
+						</div>
 					<!-- Project 2 end -->
 
 					<!-- Project 3 start -->
 						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal3">
-							<img src="./images/clocktimer.png" class="transform img_property shadow" alt="Clock and timer" title="Clock and Timer Project">
+							<img src="./images/nbatracker.png" class="transform img_property shadow" alt="NBA game score tracker screenshot" title="NBA game score tracker">
 								<!-- Modal -->
 								<div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="#modal3Label" aria-hidden="true">
 									<div class="modal-dialog modal-dialog-centered">
 										<div class="modal-content modal_bkg">
 											<div class="modal-header">
-											<h5 class="modal-title" id="modal3Label">Alarm Clock Mini-Project</h5>
+											<h5 class="modal-title" id="modal3Label">NBA Game Score Tracker</h5>
+											</div>
+											<div class="modal-body">
+											<img src="./images/nbatracker.png" class="img-fluid shadow" alt="NBA game score tracker" title="NBA game score tracker">
+											<p class="text-start mt-3">
+												A mini-project for personal use that I built that uses Axios and Cheerio JavaScript packages that fetches, parses and scrapes the NBA.com website for game scores and player stats. The data is then displayed using EJS and Bootstrap.
+											</p>
+											<a href="https://ballgame-tracker.onrender.com/" class="btn btn-dark" target="_blank">View project on Render</a>
+											</div>
+											<div class="modal-footer d-flex justify-content-center">
+											<button type="button" class="btn btn-dark" data-bs-dismiss="modal" title="Close">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
+						</div>
+					<!-- Project 3 end -->
+
+					<!-- Project 4 start -->
+						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal4">
+							<img src="./images/clocktimer.png" class="transform img_property shadow" alt="Clock and timer" title="Clock and Timer Project">
+								<!-- Modal -->
+								<div class="modal fade" id="modal4" tabindex="-1" aria-labelledby="#modal4Label" aria-hidden="true">
+									<div class="modal-dialog modal-dialog-centered">
+										<div class="modal-content modal_bkg">
+											<div class="modal-header">
+											<h5 class="modal-title" id="modal4Label">Alarm Clock Mini-Project</h5>
 											</div>
 											<div class="modal-body">
 											<img src="./images/clocktimer.png" class="img-fluid shadow" alt="Clock and Timer with Background change" title="Clock and Timer with Background changeProject">
@@ -177,16 +209,17 @@
 									</div>
 								</div>
 						</div>
-					<!-- Project 3 end -->
-					<!-- Project 4 start -->
-						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal4">
+					<!-- Project 4 end -->
+
+					<!-- Project 5 start -->
+						<div class="col-md-12 mx-4 text-center" data-bs-toggle="modal" data-bs-target="#modal5">
 							<img src="./images/simongame3.png" class="transform img_property shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
 								<!-- Modal -->
-								<div class="modal fade" id="modal4" tabindex="-1" aria-labelledby="#modal4Label" aria-hidden="true">
+								<div class="modal fade" id="modal5" tabindex="-1" aria-labelledby="#modal5Label" aria-hidden="true">
 									<div class="modal-dialog modal-dialog-centered">
 										<div class="modal-content modal_bkg">
 											<div class="modal-header">
-											<h5 class="modal-title" id="modal4Label">Simon Game Mini-Project</h5>
+											<h5 class="modal-title" id="modal5Label">Simon Game Mini-Project</h5>
 											</div>
 											<div class="modal-body">
 											<img src="./images/simongame2.png" class="img-fluid shadow" alt="Simon Game Mini-project" title="Simon Game Mini-project">
@@ -202,6 +235,7 @@
 									</div>
 								</div>
 						</div>
+					<!-- Project 5 end -->
 					</div>
 					
 				</div>
@@ -213,24 +247,37 @@
 				<div class="d-flex flex-column mx-5 gap-3">
 					<h2 class="text-center mt-5 fw-bold">Projects</h2>
 					<div class="card card_size_2 border-0 mb-md-5 mb-3 shadow">
-					  <img src="./images/project1.png" class="card-img-top" alt="Tindog screenshot" title="Tindog screenshot">
+					  <img src="./images/bakery-react.png" class="card-img-top" alt="Bakery React App" title="Bakery React App">
 					  <div class="card-body card_tool_bkg">
-					    <p class="card-text">Tindog. A landing page done in one of my previous learning activities.</p>
+					    <p class="card-text">JerryBee. A React app for a bakery website that has user-friendly UI which has CRUD functionalities that integrates with its custom RESTful API.</p>
+						<a href="http://zuitt-bootcamp-prod-328-6138-totanes.s3-website.us-east-1.amazonaws.com/" class="btn btn-dark" target="_blank">View project on AWS S3</a>
+						<a href="https://bakery-react.onrender.com/" class="btn btn-dark" target="_blank">View project on Render</a>
+
 					  </div>
 					</div>
 
 					<div class="card card_size_2 border-0 mb-md-5 mb-3 shadow">
-					  <img src="./images/project2.png" class="card-img-top" alt="Moveit features" title="Moveit features">
+					  <img src="./images/bakery-api.png" class="card-img-top" alt="RESTful API" title="RESTful API">
 					  <div class="card-body card_tool_bkg">
-					    <p class="card-text">The features section with a carousel below it of a moving company done in a previous activity.</p>
+					    <p class="card-text">A custom built RESTful API that integrates with the Bakery React app was made with MongoDB, Express.js and Node.js. CRUD operations were made in the API. Thorough testing with error handling was done using Postman.</p>
+						<a href="http://ec2-18-216-90-85.us-east-2.compute.amazonaws.com/b2/products/active/" class="btn btn-dark" target="_blank">View project on AWS EC2</a>
+						<a href="https://bakery-api-qxhm.onrender.com/products/active" class="btn btn-dark" target="_blank">View project on Render</a>
 					  </div>
+					</div>
+
+					<div class="card card_size_2 border-0 mb-md-5 mb-3 shadow">
+						<img src="./images/nbatracker.png" class="card-img-top" alt="NBA game score tracker" title="NBA game score tracker">
+						<div class="card-body card_tool_bkg">
+						  <p class="card-text">A mini-project for personal use that I built that uses Axios and Cheerio JavaScript packages that fetches, parses and scrapes the NBA.com website for game scores and player stats. The data is then displayed using EJS and Bootstrap.</p>
+						  <a href="https://ballgame-tracker.onrender.com/" class="btn btn-dark" target="_blank">View project on Render</a>
+						</div>
 					</div>
 
 					<div class="card card_size_2 border-0 shadow">
 					  <img src="./images/clocktimer.png" class="card-img-top" alt="Clock and Timer with Background change" title="Clock and Timer with Background change Project">
 					  <div class="card-body card_tool_bkg">
 					    <p class="card-text">A clock with alarm, timer and the background will change at specific times of the day. The user can set an alarm that will show a countdown and ring an audio at the end. The project is responsive and mainly built with CSS and JavaScript.</p>
-						<a href="https://christotanes.github.io/Clock-Timer-Project/" class="btn btn-dark" target="_blank">View project</a>
+						<a href="https://christotanes.github.io/Clock-Timer-Project/" class="btn btn-dark" target="_blank">View project on GitHub packages</a>
 					  </div>
 					</div>
 
@@ -238,9 +285,9 @@
 						<img src="./images/simongame2.png" class="card-img-top" alt="Simon Game Mini-project" title="Simon Game Mini-project">
 						<div class="card-body card_tool_bkg">
 						  <p class="card-text">This Simon Game mini-project was from a course in Udemy.com. The game will play first the button that the player will need to press in order. It was supposed to be done with JQuery but I decided to try it with vanilla JavaScript and test what I learned. Didn't looked at the solution and added a few modifications and enhancements for it. It was a fun challenge and really checked my capabilities in JavaScript.</p>
-						  <a href="https://christotanes.github.io/Simon-Game/" class="btn btn-dark" target="_blank">View project</a>
+						  <a href="https://christotanes.github.io/Simon-Game/" class="btn btn-dark" target="_blank">View project on GitHub Pages</a>
 						</div>
-					  </div>
+					</div>
 				</div>	
 			</div>
 			<!-- CARD if mobile End -->
