--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 						<a href="https://christotanes.github.io/Clock-Timer-Project/" class="btn btn-dark" target="_blank">View project on GitHub packages</a>
 					  </div>
 					</div>
-
+					<!-- simongame2 broken link? -->
 					<div class="card card_size_2 border-0 shadow">
 						<img src="./images/simongame2.png" class="card-img-top" alt="Simon Game Mini-project" title="Simon Game Mini-project">
 						<div class="card-body card_tool_bkg">
