--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
 
 	<main>
 <!-- Landing Start -->
-		<section id="landing" class="w-100 vh-100 d-flex align-items-center justify-content-center">
-			<div class="container">
-				<div class="row">
-					<div class="col-12 text-center">
-						<h1>Christopher Totanes</h1>
-						<div class="border-top"></div>
-						<h3 class="mt-1">Full Stack Developer</h3>
-					</div>
-				</div>
+		<section>
+			<div class="container-fluid" id="landing">
+			</div>
+			<div class="text-center landing-text">
+				<h1>Christopher Totanes</h1>
+				<div class="border-top"></div>
+				<h3 class="mt-1">Full Stack Developer</h3>
 			</div>
 		</section>
 <!-- Landing End -->
