Refactored landing text width

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<section>
 			<div class="container-fluid" id="landing">
 			</div>
-			<div class="text-center landing-text">
+			<div class="text-center container landing-text">
 				<h1>Christopher Totanes</h1>
 				<div class="border-top"></div>
 				<h3 class="mt-1">Full Stack Developer</h3>
