--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
 							<p class="text-start mt-3 pe-3">
 								JerryBee. A React-based web application with API integration of the CRUD operations and responsive design, utilizing modern JavaScript techniques and DOM manipulation. 
 							</p>
-							<a href="http://zuitt-bootcamp-prod-328-6238-totanes.s3-website.us-east-1.amazonaws.com/" class="btn btn-success" target="_blank">View project on AWS S3</a>
 							<a href="https://bakery-react.onrender.com/" class="btn btn-success" target="_blank">View project on Render</a>
 						</div>
 						<div class="col-6 d-flex flex-column align-items-center">
@@ -138,8 +137,8 @@
 							<p class="text-start mt-3 pe-3">
 								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on Render. 
 							</p>
-							<a href="http://ec2-18-216-90-85.us-east-2.compute.amazonaws.com/b2/products/active/" class="btn btn-success" target="_blank">View project on AWS EC2</a>
-							<a href="https://bakery-api-qxhm.onrender.com/products/active" class="btn btn-success" target="_blank">View project on Render</a>
+							<a href="http://ec2-52-41-229-149.us-west-2.compute.amazonaws.com:4002/products/active/" class="btn btn-success" target="_blank">View project on AWS EC2</a>
+							<a href="https://github.com/christotanes/bakery-api" class="btn btn-success" target="_blank">View project on GitHub</a>
 						</div>
 						<div class="col-6 d-flex flex-column align-items-center">
 							<img src="./images/react-api-1.png" class="img-fluid shadow mb-3" alt="RESTful API" title="RESTful API">
