Add fixing broken links description

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<div class="col-6">
 							<h4 class="pt-3">JerryBee Custom RESTful API</h4>
 							<p class="text-start mt-3 pe-3">
-								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on Render. 
+								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on Render. Fixing broken image links.
 							</p>
 							<a href="http://ec2-52-41-229-149.us-west-2.compute.amazonaws.com:4002/products/active/" class="btn btn-success" target="_blank">View project on AWS EC2</a>
 							<a href="https://github.com/christotanes/bakery-api" class="btn btn-success" target="_blank">View project on GitHub</a>
