Add fixing broken links description

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<div class="col-6">
 							<h4 class="pt-3">JerryBee React app</h4>
 							<p class="text-start mt-3 pe-3">
-								JerryBee. A React-based web application with API integration of the CRUD operations and responsive design, utilizing modern JavaScript techniques and DOM manipulation. 
+								JerryBee. A React-based web application with API integration of the CRUD operations and responsive design, utilizing modern JavaScript techniques and DOM manipulation. Fixing broken links.
 							</p>
 							<a href="https://bakery-react.onrender.com/" class="btn btn-success" target="_blank">View project on Render</a>
 						</div>
@@ -135,7 +135,7 @@
 						<div class="col-6">
 							<h4 class="pt-3">JerryBee Custom RESTful API</h4>
 							<p class="text-start mt-3 pe-3">
-								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on Render. Fixing broken image links.
+								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on my personal ubuntu AWS EC2. Fixing broken links.
 							</p>
 							<a href="http://ec2-52-41-229-149.us-west-2.compute.amazonaws.com:4002/products/active/" class="btn btn-success" target="_blank">View project on AWS EC2</a>
 							<a href="https://github.com/christotanes/bakery-api" class="btn btn-success" target="_blank">View project on GitHub</a>
