Add mailto functionality

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 							</div>
 							<div class="modal-body">
-								<form action="https://www.google.com/">
+								<form action="mailto:christopher.totanes@gmail.com" method="post" enctype="text/plain">
 
 									<div class="form-group py-1">
 										<label for="yourName">Name:</label>
