--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		  <li class="nav-item">
 			<a class="nav-link nav_link" href="#projects" title="Projects">Projects</a>
 		  </li>
-		  <li class="nav-item">
+		  <!-- <li class="nav-item">
 			<a class="nav-link nav_link" href="#tools" title="Tools">Tools</a>
-		  </li>
+		  </li> -->
 		  <li class="nav-item">
 			<a class="nav-link nav_link" href="#contact" title="Contact">Contact</a>
 		  </li>
