--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<p class="text-start mt-3 pe-3">
 								A custom built RESTful API created with MongoDB, Node.js and Express.js that implemented CRUD operations with JWT and Bcrypt for authentication functions which was used for the Full-Stack Capstone, hosted on my personal ubuntu AWS EC2. Fixing broken links.
 							</p>
-							<a href="http://ec2-52-41-229-149.us-west-2.compute.amazonaws.com:4002/products/active/" class="btn btn-success" target="_blank">View project on AWS EC2</a>
+							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com:4010/products/active" class="btn btn-success" target="_blank">View project on AWS EC2</a>
 							<a href="https://github.com/christotanes/bakery-api" class="btn btn-success" target="_blank">View project on GitHub</a>
 						</div>
 						<div class="col-6 d-flex flex-column align-items-center">
@@ -244,7 +244,7 @@
 						<img src="./images/react-api-3.png" class="img-fluid shadow mb-3" alt="RESTful API" title="RESTful API">
 						<div class="card-body card_tool_bkg">
 							<p class="card-text">A custom built RESTful API that integrates with the Bakery React app was made with MongoDB, Express.js and Node.js. CRUD operations were made in the API. Thorough testing with error handling was done using Postman.</p>
-							<a href="http://ec2-18-216-90-85.us-east-2.compute.amazonaws.com/b2/products/active/" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
+							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com:4010/products/active" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
 							<a href="https://bakery-api-qxhm.onrender.com/products/active" class="btn btn-success d-flex justify-content-center" target="_blank">View project on Render</a>
 						</div>
 					</div>
