--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 							<p class="text-start mt-3 pe-3">
 								JerryBee. A React-based web application with API integration of the CRUD operations and responsive design, utilizing modern JavaScript techniques and DOM manipulation. Fixing broken links.
 							</p>
-							<a href="https://bakery-react.onrender.com/" class="btn btn-success" target="_blank">View project on Render</a>
+							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success" target="_blank">View project on Render</a>
 						</div>
 						<div class="col-6 d-flex flex-column align-items-center">
 							<img src="./images/bakery-react.png" class="img_property shadow mb-3" alt="Bakery React App" title="Bakery React App">
@@ -233,8 +233,7 @@
 						<img src="./images/bakery-react.png" class="card-img-top" alt="Bakery React App" title="Bakery React App">
 						<div class="card-body card_tool_bkg">
 							<p class="card-text">JerryBee. A React app for a bakery website that has user-friendly UI which has CRUD functionalities that integrates with its custom RESTful API.</p>
-							<a href="http://zuitt-bootcamp-prod-328-6138-totanes.s3-website.us-east-1.amazonaws.com/" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS S3</a>
-							<a href="https://bakery-react.onrender.com/" class="btn btn-success d-flex justify-content-center" target="_blank">View project on Render</a>
+							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com/" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
 						</div>
 					</div>
 					<!-- Project React, jerrybee end -->
@@ -245,7 +244,6 @@
 						<div class="card-body card_tool_bkg">
 							<p class="card-text">A custom built RESTful API that integrates with the Bakery React app was made with MongoDB, Express.js and Node.js. CRUD operations were made in the API. Thorough testing with error handling was done using Postman.</p>
 							<a href="http://ec2-54-254-9-166.ap-southeast-1.compute.amazonaws.com:4010/products/active" class="btn btn-success d-flex justify-content-center mb-3" target="_blank">View project on AWS EC2</a>
-							<a href="https://bakery-api-qxhm.onrender.com/products/active" class="btn btn-success d-flex justify-content-center" target="_blank">View project on Render</a>
 						</div>
 					</div>
 					<!-- Project API,jerrybee end -->
